# parkinglot_backend

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
data/: GetParkInfo.json
db/: model.py  schema.py
schemas/: parkinglog_db.py  parkinglot.py
utils/: db_connect.py  fetch_parking.py  nearby.py  prediction.py  process.py  scheduler.py
