[tool.poetry]
name = "parkinglot-backend"
version = "0.1.0"
description = ""
authors = ["machichima <nary12321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.2"}
requests = "^2.32.3"
apscheduler = "^3.10.4"
asyncio = "^3.4.3"
tzdata = "^2024.2"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
